--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,4 +9,9 @@
         <error-code>404</error-code>
         <location>/404.html</location>
     </error-page>
+
+    <listener>
+        <listener-class>SessionListener</listener-class>
+    </listener>
+
 </web-app>
